# test_technique_microbiome

./: Dockerfile  README.md  README_hans.md  alembic.ini  docker-compose.yml  pyproject.toml
ETL/: insert_db.py  parser.py
data/: MetabolitesData_Upload_template.xlsx  MetabolitesData_inputDataForTEst.csv
migrations/: env.py
migrations/versions/: 2025-06-02_add_index_to_idx_id_inchi_and_cas_number.py  2025-06-02_change_to_float_sample_data.py  2025-06-02_init.py  2025-06-02_init_db_model.py  2025-06-04_init.py
src/msio/backend/: log.py  main.py
src/msio/backend/api/health/: api.py
src/msio/backend/api/health/endpoints/: health.py
src/msio/backend/api/v1/metabolites/: api.py
src/msio/backend/api/v1/metabolites/endpoints/: metabolites.py
src/msio/backend/api/v1/users/: api.py
src/msio/backend/api/v1/users/endpoints/: users.py
src/msio/backend/core/: auth.py  config.py
src/msio/backend/database/: core.py  models.py  schemas.py  session.py
